[gd_scene load_steps=18 format=2]

[ext_resource path="res://arena/mat/bricks/brick_5.png" type="Texture" id=1]
[ext_resource path="res://arena/bricks/Magnet.gd" type="Script" id=2]
[ext_resource path="res://arena/mat/forcefield.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=20]
absorbent = true

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=21]
radius = 188.0

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0, 0.171429, 0.793556, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.168627 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=18]
max_value = 0.14
_data = [ Vector2( 0, 0.0975227 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.00770714, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=19]
curve = SubResource( 18 )

[sub_resource type="Curve" id=14]
min_value = -200.0
max_value = 0.0
_data = [ Vector2( 0.207921, -3.40909 ), 0.0, -10.5944, 0, 0, Vector2( 1, -200 ), -663.595, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 1 ), 0.0, -0.0299411, 0, 0, Vector2( 1, 0.231818 ), -1.72159, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="ParticlesMaterial" id=23]
emission_shape = 5
emission_ring_radius = 230.0
emission_ring_inner_radius = 200.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
orbit_velocity_curve = SubResource( 19 )
radial_accel = -200.0
radial_accel_curve = SubResource( 15 )
scale = 4.0
scale_curve = SubResource( 17 )
color_ramp = SubResource( 13 )

[sub_resource type="Animation" id=24]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.313726 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ForceField/FF:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.180392 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ForceField/FF:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.37841, 0.406126 ),
"update": 0,
"values": [ Vector2( 15, 15 ), Vector2( 20.2, 20.2 ) ]
}

[sub_resource type="Animation" id=25]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.313726 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ForceField/FF:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.180392 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ForceField/FF:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4.43828, 0.233258 ),
"update": 0,
"values": [ Vector2( 20.2, 20.2 ), Vector2( 15, 15 ) ]
}

[node name="Magnet" type="StaticBody2D" groups=["level_items", "magnets"]]
position = Vector2( 986, 274 )
collision_layer = 4
collision_mask = 3
physics_material_override = SubResource( 20 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="ForceField" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
linear_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForceField"]
shape = SubResource( 21 )

[node name="FF" type="Sprite" parent="ForceField"]
visible = false
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 15, 15 )
texture = ExtResource( 3 )

[node name="part_Blackhole" type="Particles2D" parent="."]
scale = Vector2( 0.7, 0.7 )
emitting = false
amount = 50
lifetime = 1.29
speed_scale = 0.5
process_material = SubResource( 23 )

[node name="MagnetTajm" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/intro = SubResource( 24 )
anims/outro = SubResource( 25 )

[connection signal="body_entered" from="ForceField" to="." method="_on_ForceField_body_entered"]
[connection signal="timeout" from="MagnetTajm" to="." method="_on_MagnetTajm_timeout"]
